gcc/testsuite/rust/rustc/ui/unused/unused-mut-warning-captured-var.rs
// run-rustfix

#![forbid(unused_mut)]

fn main() {
    let mut x = 1;
// { dg-error "" "" { target *-*-* } .-1 }
    (move|| { println!("{}", x); })();
}

